[package]
name = "auradb"
version = "0.1.0"
edition = "2021"
authors = ["0xsupremedev <0xsupremedev@gmail.com>"]
description = "High-performance Rust storage engine with WAL-time KV separation, RL-driven compaction, and learned indexes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/0xsupremedev/auradb"
documentation = "https://github.com/0xsupremedev/auradb"
homepage = "https://github.com/0xsupremedev/auradb"
keywords = ["database", "storage", "lsm", "kv-store", "rocksdb", "wal", "compaction", "learned-indexes"]
categories = ["database", "data-structures", "storage"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Memory management
crossbeam = "0.8"
parking_lot = "0.12"
dashmap = "5.4"
bytes = "1.0"

# Compression (simplified for now)
# zstd = { version = "0.12", features = ["bindgen"] }  # TODO: Add back when libclang available
# lz4 = "1.24"  # TODO: Add back when needed

# Hashing and checksums
blake3 = "1.4"
crc32fast = "1.3"

# Machine learning for learned indexes (simplified for now)
# rust-bert = "0.21"  # TODO: Add back when conflicts resolved
# tch = "0.14"        # TODO: Add back when conflicts resolved

# Additional dependencies
clap = { version = "4.0", features = ["derive"] }
rand = { version = "0.8", features = ["std"] }
fastrand = "2.0"
num_cpus = "1.0"
hdrhistogram = "7"

# Statistics and metrics
histogram = "0.9"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# File I/O
memmap2 = "0.9"
tempfile = "3.8"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
